hide dsl properties