@@ -1,7 +1,5 @@
 package org.springframework.data.r2dbc.repository.query;
 
-import org.springframework.data.r2dbc.support.FastMethodInvoker;
-
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.util.*;
@@ -9,6 +7,11 @@ import java.util.stream.Collectors;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
+/**
+ * Model for web-querying and criteria dsl building
+ *
+ * @author Lao Tsing
+ */
 public class Dsl {
     public static final String idProperty = "id";
 
@@ -25,19 +28,21 @@ public class Dsl {
         this.fields = fields != null ? fields.split(",") : new String[0];
     }
 
-    public String query;
-    public String lang;
-    public String[] fields;
-    public Integer page;
-    public Integer size;
-    public String sort;
+    private String query;
+    private String lang;
+    private String[] fields;
+    private Integer page;
+    private Integer size;
+    private String sort;
 
     public String getQuery() {
         String decodedQuery = null;
-        try {
-            decodedQuery = URLDecoder.decode(query, UTF_8.displayName()).trim();
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
+        if (query != null) {
+            try {
+                decodedQuery = URLDecoder.decode(query, UTF_8.displayName()).trim();
+            } catch (UnsupportedEncodingException e) {
+                throw new RuntimeException(e);
+            }
         }
         return decodedQuery;
     }
@@ -53,7 +58,7 @@ public class Dsl {
     }
 
     public boolean isSorted() {
-        return !sort.isEmpty() && sort.contains(":");
+        return sort != null && !sort.isEmpty() && sort.contains(":");
     }
 
     public Dsl sorting(String field, String ascDesc) {
@@ -82,13 +87,6 @@ public class Dsl {
         if (field != null && !ids.isEmpty()) {
             query = start(query) + field + "!#" + ids.stream().map(Object::toString).collect(Collectors.joining(" "));
         }
-        return this;
-    }
-
-    public Dsl id(String id) {
-        Object object = FastMethodInvoker.convertObject(id);
-        if (object instanceof UUID) return id((UUID) object);
-        if (object instanceof Number) return id(((Number) object).longValue());
         return this;
     }
 
@@ -197,7 +195,7 @@ public class Dsl {
 
     public List<String> getResultFields() {
         if (fields.length > 0) {
-            return Arrays.asList(fields);
+            return List.of(fields);
         }
         return new ArrayList<>();
     }
